--- a/public/app.css
+++ b/public/app.css
@@ -87,6 +87,7 @@ ul.CardList {
 }
 
 .CardImage .largeImage {
+    position: relative;
     width: 263px;
     height: 445px;
     background-size: contain;
@@ -97,51 +98,50 @@ ul.CardList {
 .CardImage .ability {
     display: block;
     position: absolute;
-    top: 56%;
-    width: 25%;
-    height: 15%;
+    top: 59%;
+    width: 28%;
+    height: 16%;
     cursor: pointer;
 }
 
 .CardImage .ability:nth-of-type(1) {
-    left: 9%;
+    left: 4%;
 }
 
 .CardImage .ability:nth-of-type(2) {
-    left: 37.5%;
+    left: 36%;
 }
 
 .CardImage .ability:nth-of-type(3) {
-    left: 66%;
+    left: 68%;
 }
 
 .CardImage .abilityText {
     display: block;
     box-sizing: border-box;
     position: absolute;
-    width: 82%;
-    height: 30%;
-    top: 24%;
-    left: 9%;
+    width: 92%;
+    height: 33%;
+    top: 23%;
+    left: 4%;
     padding: 0.5rem;
     visibility: hidden;
 }
 
 .CardImage .abilityText .abilityName {
-    font-size: 125%;
+    font-size: 110%;
     font-weight: bold;
     text-transform: uppercase;
     color: whitesmoke;
 }
 
 .CardImage .abilityText .abilityType {
-    font-size: 105%;
     font-weight: bold;
     color: goldenrod;
 }
 
 .CardImage .abilityText .abilityDesc {
-    font-size: 85%;
+    font-size: 90%;
     margin-top: 0.5rem;
     color: lightgoldenrodyellow;
 }
