--- a/app.css
+++ b/app.css
@@ -201,7 +201,7 @@ ul.CardList {
 }
 
 .checkbox input {
-    -webkit-appearance: none; 
+    -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
 
@@ -220,9 +220,7 @@ ul.CardList {
 .checkbox label {
     position: initial;
     display: inline-block;
-    font-weight: normal;
     margin: 0;
-    text-indent: 1.5rem;
     min-width: calc(1rem + 2px);
 }
 
@@ -284,6 +282,9 @@ ul.CardList {
 .checkbox.type label:before {
     background-size: contain;
     background-repeat: no-repeat;
+}
+
+.checkbox.type.Others label:before {
 }
 
 .checkbox.type.Hero label:before {
